--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,7 +16,6 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "moduleResolution": "node",
-    "types": ["element-plus/globals"]
+    "moduleResolution": "node"
   }
 }
